log

Fri 15 Mar 2024 03:28:26 AM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
7daf57f
Fri 15 Mar 2024 03:39:46 AM UTC: 
 exercises.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
test.c: In function ‘mergeSortedArrays’:
test.c:382:5: error: ‘main’ is normally a non-static function [-Werror=main]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:410:1: error: expected declaration or statement at end of input
  410 | }
      | ^
test.c:7:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    7 | char msg[300];
      |      ^~~
At top level:
test.c:382:5: error: ‘main’ defined but not used [-Werror=unused-function]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:47:6: error: ‘readIntArray’ defined but not used [-Werror=unused-function]
   47 | void readIntArray(int arr[], int *size) {
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1475a1e
Fri 15 Mar 2024 03:40:29 AM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
Fri 15 Mar 2024 04:03:14 AM UTC: 
 exercises.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
In file included from test.c:1:
exercises.c:43:69: error: expected declaration specifiers or ‘...’ before ‘{’ token
   43 | void mergeSortedArrays(int arr1[], int size1, int arr2[], int size2,{
      |                                                                     ^
Compilation failed
93dbe64
